--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  background-color: #BDBEBF;
+.container {
+  font-family: 'Montserrat';
+  font-style: normal;
+}
+
+:root {
+  --white: #FFFFFF;
+  --darkBlue: #0D263B;
+  --lightBlue: #0061DF;
+  --grey: #E6E9EC;
+  --darkGrey: #696969;
 }
